test/files/neg/t12159b.check
s_2.scala:5: error: illegal inheritance from sealed trait I_1
class S extends I_1
                ^
1 error
